# lattice

./: .gitattributes  .gitignore  .prettierrc.mjs  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  controls.json  crates.js  deploy-docs.sh  help.html  index.html  index.md  justfile  out.txt  package-lock.json  package.json  profile.json  run-benches.sh  settings.html  src-files.js
ab_glyph/: struct.FontArc.html
anyhow/: struct.Error.html
approx/: all.html  index.html  macro.abs_diff_eq.html  macro.abs_diff_ne.html  macro.assert_abs_diff_eq.html  macro.assert_abs_diff_ne.html  macro.assert_relative_eq.html  macro.assert_relative_ne.html  macro.assert_ulps_eq.html  macro.assert_ulps_ne.html  macro.relative_eq.html  macro.relative_ne.html  macro.ulps_eq.html  macro.ulps_ne.html  struct.AbsDiff.html  struct.Relative.html  struct.Ulps.html  trait.AbsDiffEq.html  trait.RelativeEq.html  trait.UlpsEq.html
arboard/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.Clear.html  struct.Clipboard.html  struct.Get.html  struct.ImageData.html  struct.Set.html  trait.SetExtApple.html
arraydeque/: all.html  index.html  struct.ArrayDeque.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  trait.RangeArgument.html
assert_type_match/: all.html  attr.assert_type_match.html  index.html
assets/: L.OscSend.amxd  L.OscTransport.amxd
benches/: frame_controller_bench.rs
bevy_macro_utils/: all.html  fn.derive_label.html  fn.ensure_no_collision.html  fn.get_lit_bool.html  fn.get_lit_str.html  fn.get_struct_fields.html  index.html  struct.BevyManifest.html  struct.Symbol.html
bevy_ptr/: all.html  fn.dangling_with_align.html  index.html  struct.Aligned.html  struct.ConstNonNull.html  struct.OwningPtr.html  struct.Ptr.html  struct.PtrMut.html  struct.ThinSlicePtr.html  struct.Unaligned.html  trait.IsAligned.html  trait.UnsafeCellDeref.html
bevy_reflect/: all.html  attr.reflect_remote.html  attr.reflect_trait.html  derive.FromReflect.html  derive.Reflect.html  derive.TypePath.html  enum.Access.html  enum.AccessErrorKind.html  enum.ApplyError.html  enum.DynamicVariant.html  enum.GenericInfo.html  enum.ReflectKind.html  enum.ReflectMut.html  enum.ReflectOwned.html  enum.ReflectPathError.html  enum.ReflectRef.html  enum.TypeInfo.html  enum.TypeInfoError.html  enum.VariantInfo.html  (+109 more)
lattice-macros/: Cargo.toml  README.md
lattice-macros/src/: lib.rs
sketches/: Cargo.toml
sketches/src/: main.rs
sketches/src/sketches/: blob.rs  blob.wgsl  blob.yaml  brutalism.rs  brutalism.yaml  brutalism_shader1.wgsl  cloud_tunnel.rs  cloud_tunnel.wgsl  cloud_tunnel.yaml  d_warp.rs  d_warp.wgsl  d_warp.yaml  displacement_2a.rs  drop.rs  drop_tines.rs  drop_walk.rs  dynamic_uniforms.rs  easing_vis.rs  g_warp.rs  g_warp.wgsl  g_warp.yaml  grid_splash.rs  grid_splash.wgsl  grid_splash.yaml  heat_mask.rs  helpers.wgsl  interference.rs  interference.wgsl  kalos.rs  kalos.wgsl  kalos.yaml  kalos_2.rs  kalos_2.wgsl  kalos_2.yaml  kalos_2_shader_1.wgsl  kalos_2_shader_2.wgsl  marcher.rs  marcher.yaml  mod.rs  neon.rs  (+18 more)
sketches/src/sketches/common/: helpers.wgsl  util.rs
sketches/src/sketches/dev/: animation_dev.rs  audio_controls_dev.rs  audio_dev.rs  bug_repro.rs  bug_repro.yaml  control_script_dev.rs  control_script_dev.yaml  cv_dev.rs  dynamic_uniforms.rs  dynamic_uniforms.wgsl  effects_wavefolder_dev.rs  midi_dev.rs  mod.rs  non_yaml_dev.rs  osc_dev.rs  osc_transport_dev.rs  responsive_dev.rs  shader_to_texture_dev.rs  wgpu_compute_dev.rs
sketches/src/sketches/genuary_2025/: g25_10_11_12.rs  g25_13_triangle.rs  g25_14_black_and_white.rs  g25_18_wind.rs  g25_19_op_art.rs  g25_1_horiz_vert.rs  g25_20_23_brutal_arch.rs  g25_20_23_brutal_arch_shader1.wgsl  g25_20_23_brutal_arch_shader2.wgsl  g25_22_gradients_only.rs  g25_2_layers.rs  g25_5_isometric.rs  g25_5_isometric.wgsl  mod.rs
sketches/src/sketches/scratch/: basics.rs  basics.wgsl  basics.yaml  bos.rs  bos.wgsl  breakpoints_2.rs  brutalism_shader2.wgsl  chromatic_aberration.rs  cloud_tunnel.wgsl  cloud_tunnel.yaml  displacement_1.rs  displacement_1a.rs  displacement_2.rs  easing_vis.rs  fb.rs  fb.wgsl  fb.yaml  flow_field_basic.rs  lines.rs  marcher.rs  mod.rs  noise.rs  perlin_loop.rs  ray_marching.rs  ray_marching.wgsl  ray_marching.yaml  rip.rs  rip.wgsl  rip.yaml  rm_rep.rs  rm_rep.wgsl  rm_rep.yaml  sand_line.rs  sand_lines.rs  toy.rs  toy.wgsl  unt.rs  unt.wgsl  unt.yaml  vertical.rs  (+2 more)
sketches/src/sketches/shared/: drop.rs  sand_line.rs  util.rs
sketches/src/sketches/templates/: basic_cube_shader_template.rs  basic_cube_shader_template.yaml  du_fs_template.rs  du_fs_template.wgsl  du_fs_template.yaml  du_fs_texture_template.rs  du_fs_texture_template.yaml  du_fs_texture_template_2.wgsl  dyn_uni_fs_template.rs  fullscreen_shader_template.rs  mod.rs  template.rs
sketches/storage/: images_metadata.json
sketches/storage/Controls/: audio_test_controls.json  blob_controls.json  control_script_dev_controls.json  d_warp_controls.json  drop_controls.json  drop_tines_controls.json  drop_walk_controls.json  du_fs_texture_template_controls.json  g_warp_controls.json  grid_splash_controls.json  heat_mask_controls.json  multiple_sketches_dev_controls.json  perlin_loop_controls.json  ray_marching_controls.json  rm_rep_controls.json  spiral_2_controls.json  spiral_controls.json  swirl_controls.json  unt_controls.json  vertical_2_controls.json  wave_fract_controls.json
xtal/: Cargo.toml
xtal-macros/: Cargo.toml  README.md
xtal-macros/src/: sketch_components.rs
xtal/src/: lib.rs  main.rs
xtal/src/framework/: audio.rs  gpu.rs  instrumentation.rs  logging.rs  midi.rs  mod.rs  noise.rs  sketch.rs  util.rs
xtal/src/framework/control/: audio_controls.rs  config.rs  control_hub.rs  control_hub_builder.rs  midi_controls.rs  mod.rs  param_mod.rs  ui_controls.rs
xtal/src/framework/motion/: animation.rs  easing.rs  effects.rs  mod.rs  timing.rs
xtal/src/runtime/: app.rs  global.rs  map_mode.rs  mod.rs  registry.rs  serialization.rs  storage.rs  web_view.rs  web_view_process.rs
(+25949 files in other folders)
