[package]
name = "lattice"
version = "0.1.0"
authors = ["Lokua <dev@lokua.net>"]
edition = "2021"

[workspace]
members = [
    "scripts/image-markdown"
]

[dependencies]
chrono = "0.4.38"
cpal = "0.15.3"
dirs = "5.0.1"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
midir = "0.10.1"
nannou = "0.19.0"
nannou_egui = "0.19.0"
once_cell = "1.20"
parking_lot = "0.12.3"
rayon = "1.10.0"
rustfft = "6.2.0"
serde = "1.0.215"
serde_json = "1.0.133"
serial_test = "3.2.0"
termcolor = "1.4.1"