[package]
name = "lattice"
version = "0.1.0"
authors = ["Lokua <dev@lokua.net>"]
edition = "2021"
default-run = "lattice"

# TODO: fixme
[lib]
doctest = false

[features]
default = ["hi_res_cc"]
# default = []
instrumentation = []
hi_res_cc = []

# clean with:
#   rm -rf target/incremental
[profile.release]
incremental = true

[workspace]
members = ["derives"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "frame_controller_bench"
harness = false
path = "benches/frame_controller_bench.rs"

[dependencies]
arboard = "3.4.1"
# glam feature added as a hail-mary to deal with occasional
# linking errors coming from bevy_reflect. This for some reason works?
bevy_reflect = { version = "0.15.1", features = ["glam"] }
bytemuck = "1.21.0"
chrono = "0.4.38"
clap = { version = "4.5.28", features = ["derive"] }
cpal = "0.15.3"
dark-light = "1.1.1"
derives = { path = "./derives" }
dirs = "5.0.1"
env_logger = "0.11.5"
indexmap = { version = "2.7.1", features = ["serde"] }
lazy_static = "1.5.0"
log = "0.4.22"
midir = "0.10.1"
naga = "0.13.0"
nannou = "0.19.0"
nannou_egui = "0.19.0"
nannou_osc = "0.19.0"
notify = "8.0.0"
once_cell = "1.20"
parking_lot = "0.12.3"
rayon = "1.10.0"
rustc-hash = "2.1.1"
rustfft = "6.2.0"
serde = "1.0.215"
serde_json = "1.0.133"
serde_yml = "0.0.12"
serial_test = "3.2.0"
termcolor = "1.4.1"
toml = "0.8.19"
wgpu-types = "=0.17.0"
# Bug: we shouldn't have to bring in serde_yaml
# TODO: we might want to fork this since it's on GitLab, doesn't have the ability to submit issues, etc.
yaml-merge-keys = { git = "https://gitlab.kitware.com/utils/rust-yaml-merge-keys.git", features = [
    "serde_yml",
    "serde_yaml",
] }
